package prak12.latihan3;

public interface Keyboard {
    void tekan_enter();
}