package prak12.latihan3;

public interface Mouse {
    void klik_kanan();
    void klik_kiri();
}