package prak12.latihan3;

public interface Printer {
    void cetak_data();
}